--- a/.i3/config
+++ b/.i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:System San Francisco Display 10
+font pango:Inconsolata Regular 10
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -25,7 +25,8 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu
+#bindsym $mod+d exec dmenu
+bindsym $mod+d exec rofi -show run -lines 5 -eh 2 -width 100 -padding 250 -opacity "80" -bw 0 -bc "$base01" -bg "$base02" -fg "$base07" -hlbg "$base05" -columns 2 -font "Inconsolata Regular 18" -hlfg "#9575cd"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -108,6 +109,9 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
+assign [class="Firefox"] $workspace2
+assign [class="Mate-terminal"] $workspace1
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -115,8 +119,6 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
-#assign [class="Firefox"] $workspace2
-#assign [class="Mate-termina"] $workspace1
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -169,10 +171,10 @@ set $base0E #c0b7f9
 set $base0F #fcc09e
 
 
-client.focused             $base01   $base01   $base07   $base0F
-client.unfocused           $base02   $base02   $base03  $base0F
-client.focused_inactive    $base02   $base02   $base03  $base0F
-client.urgent              $base02   $base08   $base00  $base0F
+client.focused             $base01  $base01  $base07  $base0F
+client.unfocused           $base02  $base02  $base03  $base0F
+client.focused_inactive    $base02  $base02  $base03  $base0F
+client.urgent              $base02  $base08  $base00  $base0F
 
 hide_edge_borders both
 
@@ -190,7 +192,7 @@ bar {
         inactive_workspace     $base01    $base01       $base03
         urgent_workspace       $base01    $base01       $base08
     }
-    font pango:System San Francisco Display 10, FontAwesome 12
+    font pango:Inconsolata Regular 10, FontAwesome 10
     position top
     status_command i3status -c ~/.i3/i3status.conf
 }
@@ -216,4 +218,9 @@ bindsym XF86MonBrightnessDown exec xbacklight -dec 10 # decrease screen brightne
 # bindsym XF86AudioNext exec playerctl next
 # bindsym XF86AudioPrev exec playerctl previous
 
-exec_always feh --bg-scale /home/colin/Pictures/wallpaper.jpg
+# set a wallpaper
+exec_always feh --bg-scale /home/colin/Pictures/saltspringisland.jpg
+
+exec firefox
+exec mate-terminal
+exec_always compton
