--- a/.i3/i3status.conf
+++ b/.i3/i3status.conf
@@ -7,31 +7,35 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
-        colors = true
-        interval = 1
+    colors = true
+    interval = 30
+    color_good = "#36E592"
+    color_degraded = "#CE9726"
+    color_bad = "#CE4B4F"
+    color_separator = "#B3BEFF"
 }
 
 #order += "run_watch DHCP"
-order += "run_watch VPN"
-order += "wireless wlan0"
-order += "ethernet eth0"
+#order += "run_watch VPN"
+order += "wireless wlp3s0"
+order += "ethernet enp0s25"
 order += "battery 0"
 order += "load"
 order += "tztime local"
 
-wireless wlan0 {
-        format_up = "W: %essid %ip"
-        format_down = "W: down"
+wireless wlp3s0 {
+        format_up = "  %ip"
+        format_down = "  down"
 }
 
-ethernet eth0 {
+ethernet enp0s25 {
         # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+        format_up = " %ip (%speed)"
+        format_down = " down"
 }
 
 battery 0 {
-        format = "%status %remaining"
+        format = " %remaining"
         low_threshold = 10
         threshold_type = "time"
 }
@@ -40,12 +44,12 @@ battery 0 {
         #pidfile = "/var/run/dhclient*.pid"
 #}
 
-run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
-}
+#run_watch VPN {
+        #pidfile = "/var/run/vpnc/pid"
+#}
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = "%Y-%m-%d %H:%M"
 }
 
 load {
