--- a/.i3/config
+++ b/.i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Inconsolata Regular 10
+font pango:Inconsolata Regular 12
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -192,7 +192,7 @@ bar {
         inactive_workspace     $base01    $base01       $base03
         urgent_workspace       $base01    $base01       $base08
     }
-    font pango:Inconsolata Regular 10, FontAwesome 10
+    font pango:Inconsolata Regular 11, FontAwesome 11
     position top
     status_command i3status -c ~/.i3/i3status.conf
 }
@@ -203,7 +203,7 @@ bindsym $mod+shift+x exec ~/.lock/lock.sh ~/.lock/lock.png
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-# bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
 # # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
