--- a/.i3/config
+++ b/.i3/config
@@ -19,7 +19,7 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 #bindsym $mod+d exec dmenu
-bindsym $mod+d exec rofi -show run -lines 5 -eh 2 -width 100 -padding 250 -opacity "80" -bw 0 -bc "$base01" -bg "$base02" -fg "$base07" -hlbg "$base05" -columns 2 -font "Inconsolata Regular 18" -hlfg "#9575cd"
+bindsym $mod+d exec zsh -c "rofi -rnow -show run -lines 5 -eh 2 -width 100 -padding 250 -opacity \"80\" -bw 0 -bc \"$base01\" -bg \"$base02\" -fg "$base07\" -hlbg \"$base05\" -columns 2 -font \"Inconsolata Regular 18\" -hlfg \"#9575cd\""
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -76,14 +76,14 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 set $workspace1 "1. "
-set $workspace2 "2.  "
-set $workspace3 "3. "
-set $workspace4 "4. ""
+set $workspace2 "2. "
+set $workspace3 "3.  "
+set $workspace4 "4. "
 set $workspace5 "5. "
-set $workspace6 "6. "
-set $workspace7 "7. "
-set $workspace8 "8. "
-set $workspace9 "9. "
+set $workspace6 "6. "
+set $workspace7 "7. "
+set $workspace8 "8. "
+set $workspace9 "9. "
 set $workspace10 "10 "
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
@@ -109,8 +109,11 @@ bindsym $mod+Shift+8 move container to workspace $workspace8
 bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
-#assign [class="Mate-terminal"] $workspace1
-#assign [class="Firefox"] $workspace2
+assign [class="Firefox"] $workspace3
+assign [class="Slack"]   $workspace6
+
+# spotify is a bit dumb, so we have to do this differently
+for_window [class="Spotify"] move to workspace $workspace8
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -176,6 +179,10 @@ hide_edge_borders both
 bindsym $mod+shift+x exec ~/.lock/lock.sh ~/.lock/lock.png
 bindsym $mod+z exec "/home/colin/dotfiles/scripts/power.sh"
 
+# screenshots
+bindsym Print exec screen.sh root
+bindsym $mod+Print exec screen.sh active
+
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
@@ -195,19 +202,28 @@ bindsym XF86AudioNext  exec playerctl next
 bindsym XF86AudioPrev  exec playerctl previous
 
 # needs i3-gaps for this to work
-gaps inner 2
-gaps outer 2
+gaps inner 10
+gaps outer 10
 
 exec termite
 exec firefox
-exec --no-startup-id xautolock -time 5 -detectsleep -locker '/home/colin/.lock/lock.sh /home/colin/.lock/lock.png"
+exec spotify
+
+exec --no-startup-id xautolock -time 30 -detectsleep -locker '/home/colin/.lock/lock.sh /home/colin/.lock/lock.png"
+
 # gives roffi some transparency
 exec --no-startup-id compton
-exec --no-startup-id display-visor -i -l LID -f -0 LVDS-1 -1 DP-1
+exec --no-startup-id slack
+exec --no-startup-id tlp start
+exec_always --no-startup-id display-visor -i -l LID -f -0 LVDS-1 -1 DP-1
 exec_always --no-startup-id ~/bin/xmodmap_reload.py
 exec_always --no-startup-id "/home/colin/dotfiles/scripts/polybar.sh"
-exec_always feh --bg-scale /home/colin/install/files/space.png  # set a wallpaper
+#exec_always feh --bg-scale /home/colin/install/files/space.png  # set a wallpaper
 exec_always --no-startup-id "xrdb -merge ~/.Xresources"
+
+# Cycle wallpapers and apply new colorscheme.
+bindsym $mod+p exec "wal -i $HOME/Pictures/Wallpapers -o wal-set"
+
 
 # from i3-style theme "tomorrow-night-80s"
 client.focused #99cc99 #99cc99 #000000 #2d2d2d
