--- a/.polybar.conf
+++ b/.polybar.conf
@@ -9,7 +9,7 @@ secondary = #e60053
 alert = #bd2c40
 
 [bar/top]
-monitor = LVDS-1
+monitor = ${env:MONITOR}
 width = 100%
 height = 34
 
@@ -32,7 +32,7 @@ modules-left = powermenu
 modules-right = wireless-network wired-network battery date
 
 [bar/bottom]
-monitor = LVDS-1
+monitor = ${env:MONITOR}
 bottom = true
 width = 100%
 height = 27
@@ -61,6 +61,9 @@ modules-right = cpu memory
 [module/battery]
 type = internal/battery
 full-at = 99
+
+time-format = %H:%M
+label-discharging = %time%
 
 format-charging = <animation-charging> <label-charging>
 format-discharging = <ramp-capacity> <label-discharging>
