--- a/.gitconfig
+++ b/.gitconfig
@@ -4,4 +4,17 @@
 [core]
 	excludesfile = /home/colin/.gitignore
 [push]
-	default = simple
+    default = simple
+
+[diff]
+    tool = meld
+[difftool]
+    prompt = false
+[difftool "meld"]
+    cmd = meld "$LOCAL" "$REMOTE"
+
+[merge]
+    tool = mymeld
+    conflictstyle = diff3
+[mergetool "mymeld"]
+    cmd = meld $LOCAL $BASE $REMOTE -o $MERGED --auto-merge
