--- a/.i3/config
+++ b/.i3/config
@@ -12,18 +12,12 @@ font pango:Inconsolata Regular 12
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec termite
+bindsym $mod+Return exec mate-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-#bindsym $mod+d exec dmenu
 bindsym $mod+d exec zsh -c "rofi -rnow -show run -lines 5 -eh 2 -width 100 -padding 250 -opacity \"80\" -bw 0 -bc \"$base01\" -bg \"$base02\" -fg "$base07\" -hlbg \"$base05\" -columns 2 -font \"Inconsolata Regular 18\" -hlfg \"#9575cd\""
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 bindsym $mod+h focus left
@@ -85,6 +79,7 @@ set $workspace7 "7. "
 set $workspace8 "8. "
 set $workspace9 "9. "
 set $workspace10 "10 "
+
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
 bindsym $mod+2 workspace $workspace2
@@ -192,33 +187,24 @@ bindsym XF86AudioMute        exec --no-startup-id pactl set-sink-mute 0 toggle #
 bindsym XF86MonBrightnessUp   exec xbacklight -inc 10 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 10 # decrease screen brightness
 
-# # Touchpad controls
-# bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
-#
-# # Media player controls
-bindsym XF86AudioPlay  exec playerctl play
-bindsym XF86AudioPause exec playerctl pause
-bindsym XF86AudioNext  exec playerctl next
-bindsym XF86AudioPrev  exec playerctl previous
-
 # needs i3-gaps for this to work
 gaps inner 10
 gaps outer 10
 
-exec termite
+exec mate-terminal
 exec firefox
 exec spotify
 
-exec --no-startup-id xautolock -time 30 -detectsleep -locker '/home/colin/.lock/lock.sh /home/colin/.lock/lock.png"
+#exec --no-startup-id xautolock -time 30 -detectsleep -locker '/home/colin/.lock/lock.sh /home/colin/.lock/lock.png"
 
 # gives roffi some transparency
 exec --no-startup-id compton
 exec --no-startup-id slack
 exec --no-startup-id tlp start
-exec_always --no-startup-id display-visor -i -l LID -f -0 LVDS-1 -1 DP-1
+exec_always --no-startup-id display-visor -i -l LID -f -0 eDP1 -1 HDMI2
 exec_always --no-startup-id ~/bin/xmodmap_reload.py
-exec_always --no-startup-id "/home/colin/dotfiles/scripts/polybar.sh"
-#exec_always feh --bg-scale /home/colin/install/files/space.png  # set a wallpaper
+exec_always --no-startup-id "/home/colin/bin/polybar.sh"
+exec_always feh --bg-scale /home/colin/install/files/space.png  # set a wallpaper
 exec_always --no-startup-id "xrdb -merge ~/.Xresources"
 
 # Cycle wallpapers and apply new colorscheme.
@@ -226,7 +212,8 @@ bindsym $mod+p exec "wal -i $HOME/Pictures/Wallpapers -o wal-set"
 
 
 # from i3-style theme "tomorrow-night-80s"
-client.focused #99cc99 #99cc99 #000000 #2d2d2d
-client.focused_inactive #393939 #393939 #888888 #292d2e
-client.unfocused #2d2d2d #2d2d2d #999999 #292d2e
-client.urgent #2f343a #900000 #ffffff #900000
+
+client.focused #586e75 #586e75 #fdf6e3 #268bd2
+client.focused_inactive #073642 #073642 #93a1a1 #002b36
+client.unfocused #002b36 #002b36 #586e75 #002b36
+client.urgent #dc322f #dc322f #fdf6e3 #dc322f
