--- a/.i3/i3status.conf
+++ b/.i3/i3status.conf
@@ -23,12 +23,12 @@ order += "battery 0"
 order += "load"
 order += "tztime local"
 
-wireless wlp3s0 {
+wireless wlp4s0 {
         format_up = "  %ip"
         format_down = "  down"
 }
 
-ethernet enp0s25 {
+ethernet enp0s31f6 {
         # if you use %speed, i3status requires root privileges
         format_up = " %ip (%speed)"
         format_down = " down"
