--- a/.polybar.conf
+++ b/.polybar.conf
@@ -2,54 +2,38 @@
 screenchange-reload = true
 
 [colors]
-;background = #00000000
-;foreground = #ccffffff
-
+background = #222
 background-alt = #444
+
+foreground = #dfdfdf
 foreground-alt = #555
-primary = #00ff00
+
+primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
 
 [bar/top]
 monitor = ${env:MONITOR}
 width = 100%
-height = 34
-
-background = #00000000
-foreground = #ccffffff
-
-line-color = ${bar/bottom.background}
-line-size = 16
-
-spacing = 2
-padding-right = 5
-module-margin = 4
-
-font-0 = NotoSans-Regular:size=10;-1
-font-1 = Material Icons:size=10;0
-font-2 = Termsynu:size=8:antialias=false;-2
-font-3 = FontAwesome:size=12;
-
-modules-left = volume
-modules-right = backlight wireless-network wired-network battery0 battery1 date
-
-[bar/bottom]
-monitor = ${env:MONITOR}
-bottom = true
-width = 100%
 height = 27
+radius = 6.0
 
-background = ${bar/top.background}
-foreground = ${bar/top.foreground}
+background = ${colors.background}
+foreground = ${colors.foreground}
 
-line-color = ${bar/top.background}
+line-color = ${colors.background}
 line-size = 2
 
-spacing = 3
-padding-right = 4
-module-margin-left = 0
-module-margin-right = 6
+border-size = 5
+border-color = #00000000
+
+spacing = 2
+padding-left = 5
+padding-right = 5
+
+module-margin = 4
+module-margin-left = 3
+module-margin-right = 3
 
 font-0 = NotoSans-Regular:size=10;0
 font-1 = unifont:size=6;-3
@@ -59,12 +43,11 @@ font-4 = MaterialIcons:size=10;-1
 font-5 = Termsynu:size=8:antialias=false;0
 
 modules-left = i3
-modules-right = filesystem cpu temperature memory
+modules-right = volume backlight wireless-network wired-network battery2 cpu date
 
 [module/date]
 type = internal/date
-date =    %%{F#99}%Y-%m-%d%%{F-}  %%{F#fff}%H:%M%%{F-}
-date-alt = %%{F#fff}%A, %d %B %Y  %%{F#fff}%H:%M%%{F#666}:%%{F#fba922}%S%%{F-}
+date = %%{F#99}%Y-%m-%d%%{F-}  %%{F#fff}%H:%M%%{F-}
 
 [module/memory]
 type = internal/memory
@@ -85,110 +68,11 @@ bar-used-empty = ─
 bar-used-empty-font = 6
 bar-used-empty-foreground = #444444
 
-
-[module/avg-battery]
+[module/battery2]
+;https://github.com/kotajacob/dots/blob/master/bin/bat/bat.py
 type = custom/script
-exec = "count=$(acpi -b | wc -l); sum=$(acpi -b | egrep -o '[0-9]{1,3}%' | tr -d '%' | xargs -I% echo -n '+%'); echo Avg capacity: $(( sum / count ))%"
+exec = ~/bin/battery.py
 interval = 5
-
-[module/battery0]
-type = internal/battery
-battery = BAT0
-full-at = 99
-
-time-format = %H:%M
-label-discharging = %time% (BAT0)
-
-format-charging = <animation-charging> <label-charging>
-format-discharging = <ramp-capacity> <label-discharging>
-format-full = <ramp-capacity> <label-full>
-
-ramp-capacity-0 = 
-ramp-capacity-0-foreground = #f53c3c
-ramp-capacity-1 = 
-ramp-capacity-1-foreground = #ffa900
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-
-bar-capacity-width = 10
-bar-capacity-format = %{+u}%{+o}%fill%%empty%%{-u}%{-o}
-bar-capacity-fill = █
-bar-capacity-fill-foreground = #ddffffff
-bar-capacity-fill-font = 3
-bar-capacity-empty = █
-bar-capacity-empty-font = 3
-bar-capacity-empty-foreground = #44ffffff
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-framerate = 750
-
-[module/battery1]
-type = internal/battery
-battery = BAT1
-full-at = 99
-
-time-format = %H:%M
-label-discharging = %time% (BAT1)
-
-format-charging = <animation-charging> <label-charging>
-format-discharging = <ramp-capacity> <label-discharging>
-format-full = <ramp-capacity> <label-full>
-
-ramp-capacity-0 = 
-ramp-capacity-0-foreground = #f53c3c
-ramp-capacity-1 = 
-ramp-capacity-1-foreground = #ffa900
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-
-bar-capacity-width = 10
-bar-capacity-format = %{+u}%{+o}%fill%%empty%%{-u}%{-o}
-bar-capacity-fill = █
-bar-capacity-fill-foreground = #ddffffff
-bar-capacity-fill-font = 3
-bar-capacity-empty = █
-bar-capacity-empty-font = 3
-bar-capacity-empty-foreground = #44ffffff
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-framerate = 750
-
-[module/mpd]
-type = internal/mpd
-format-online = <icon-prev> <icon-stop> <toggle> <icon-next>  <icon-repeat> <icon-random>  <bar-progress> <label-time>  <label-song>
-
-icon-play = 
-icon-pause = 
-icon-stop = 
-icon-prev = 
-icon-next = 
-icon-random = 
-icon-repeat = 
-
-toggle-on-foreground =
-toggle-off-foreground = #55
-
-bar-progress-width = 45
-bar-progress-format = %{A4:mpdseek+2: A5:mpdseek-2:}%fill%%indicator%%empty%%{A A}
-bar-progress-indicator = |
-bar-progress-indicator-foreground = #ff
-bar-progress-indicator-font = 3
-bar-progress-fill = ─
-bar-progress-fill-foreground = #bb
-bar-progress-fill-font = 3
-bar-progress-empty = ─
-bar-progress-empty-font = 3
-bar-progress-empty-foreground = #44
 
 [module/wireless-network]
 type = internal/network
@@ -220,11 +104,6 @@ interval = 3.0
 
 label-connected =    %{T3}%local_ip%%{T-}
 label-disconnected-foreground = #66
-
-[module/clock]
-type = internal/date
-interval = 2
-date = %%{F#999}%Y-%m-%d%%{F-}  %%{F#fff}%H:%M%%{F-}
 
 [module/i3]
 type = internal/i3
@@ -274,9 +153,9 @@ master-mixer = Master
 ; Use the following command to list available mixer controls:
 ; $ amixer scontrols | sed -nr "s/.*'([[:alnum:]]+)'.*/\1/p"
 ; Default: none
-speaker-mixer = Speaker
+;speaker-mixer = Speaker
 ; Default: none
-headphone-mixer = Headphone
+;headphone-mixer = Headphone
 
 ; NOTE: This is required if headphone_mixer is defined
 ; Use the following command to list available device controls
@@ -287,6 +166,40 @@ headphone-id = 17
 ; Use volume mapping (similar to amixer -M and alsamixer), where the increase in volume is linear to the ear
 ; Default: false
 mapping = true
+
+
+;available tags:
+;   <label-volume> (default)
+;   <ramp-volume>
+;   <bar-volume>
+format-volume = <ramp-volume> <label-volume>
+
+; Available tags:
+;   <label-muted> (default)
+;   <ramp-volume>
+;   <bar-volume>
+;format-muted =<label-muted>
+
+; Available tokens:
+;   %percentage% (default)
+;label-volume = %percentage%%
+
+; Available tokens:
+;   %percentage% (default)
+label-muted =    0%
+label-muted-foreground = #66
+
+; Only applies if <ramp-volume> is used
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+
+; If defined, it will replace <ramp-volume> when
+; headphones are plugged in to `headphone_control_numid`
+; If undefined, <ramp-volume> will be used for both
+; Only applies if <ramp-volume> is used
+ramp-headphones-0 = 
+ramp-headphones-1 = 
 
 [module/backlight]
 type = internal/xbacklight
